Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15261

Crash on Ctrl+[ in Russian keyboard layout with FakeVim turned on

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 4.0.0-beta1
    • Qt Creator 3.4.2, Qt Creator 3.5.0, Qt Creator 3.5.1
    • FakeVim
    • Kubuntu 14.04.2, Qt 5.5 compiled from source
    • ecf3eb1d9e440f47029e85f1c2da13e0631160db

    Description

      When I type some comments in Russian, and then try to press Ctrl+[ (which should act equivalently to ESC), but forget to switch back to English keyboard layout before this, QtCreator crashes.

      To reproduce:
      1. Setup your system to have Russian layout in addition to English
      2. Launch QtCreator
      3. Open a file (cpp or h)
      4. Make sure you have FakeVim turned on
      5. Switch to Russian keyboard layout
      6. Press <Insert>, then <Ctrl> + <[> (effectively <Ctrl>+<Cyrillic "х"> due to Russian layout)
      Get the crash.

      Backtrace is attached.

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-15261
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            10110111 Ruslan Kabatsayev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes