FakeVim: Handle Ctrl+[ with Russian keyboard layout

Task-number: QTCREATORBUG-15261
Change-Id: I6b63fdce965347dc883c72223b482883beccbb80
Reviewed-by: hjk <hjk@theqtcompany.com>